Added new string to COM-12

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -441,6 +441,7 @@
     p002 = 'One extra server role or feature installed'
     f001 = 'One or more extra server roles or features installed'
     n001 = 'Operating system not supported'
+    n002 = 'Domain controllers are excluded from this check'
 
 
 #################################################################################################
