Updates to Compiler & QASCT for new upcoming checks

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -106,7 +106,7 @@
     AppliesTo      = 'Applies To'              # Part of the HTML hover help.
     HTML_Data      = 'Data'                    # The informational data returned
 
-# Check Sections
+[section]
     Accounts       = 'Accounts'                # User and group accounts
     Compliance     = 'Compliance'              # Tooling agent checks (AV, SCOM, SCCM, etc)
     Drives         = 'Drives'                  # Local disk drive information
@@ -114,9 +114,25 @@
     Network        = 'Network'                 # Local area networking information
     Regional       = 'Regional'                # Localised keyboard/language settings
     Security       = 'Security'                # Security and firewall checks
+    SQL            = 'SQL'                     # Microsoft SQL Servers
     System         = 'System'                  # Local server system checks
     Virtual        = 'Virtual'                 # Servers that are either Hyper-V or VMware ESX guests
     SystemFailure  = 'System Failure'          # Some sort of failure occurred with the server/check
+
+# This list helps the engine convert check names into display names
+# The value must match the above list of keys
+[sectionlookup]
+    acc = 'Accounts'
+    com = 'Compliance'
+    drv = 'Drives'
+    hvh = 'HyperV-Host'
+    net = 'Network'
+    reg = 'Regional'
+    sec = 'Security'
+    sql = 'SQL'
+    sys = 'System'
+    vmw = 'Virtual'
+    err = 'SystemFailure'
 
 [common]
     Pass           = 'Pass'                    # The check had a PASS result
@@ -136,6 +152,7 @@
     DCS            = 'Domain Controllers'
     RDP            = 'Terminal Servers'
     DTS            = 'Domain Controllers And Terminal Servers'
+
     SQL            = 'SQL Servers'
     EXH            = 'Exchange Servers'
 
@@ -976,6 +993,67 @@
     p001 = 'SMBv1 is disabled'
     f001 = 'SMBv1 is enabled'
     dt01 = 'The following registry paths are incorrect:,#'
+
+#################################################################################################
+# SQL SERVERS
+[sql01]
+    Appl = SQL
+    Name = 'SQL Version'
+    Desc = 'Checks that the SQL version is up-to-date and supported.'
+    p001 = 'SQL Server version and patch level are supported'
+    w001 = 'SQL Server version is supported, patch level is out of date'
+    f001 = 'SQL Server version and patch level is out of support'
+    n001 = 'SQL is not installed on this server'
+    
+[sql02]
+    Appl = SQL
+    Name = 'SQL Agent'
+    Desc = 'Checks that the SQL Server Agent service is up and running.'
+    p001 = 'SQL Server Agent service is running'
+    f001 = 'SQL Server Agent service is stopped'
+    n001 = 'SQL is not installed on this server'
+
+[sql03]
+    Appl = SQL
+    Name = 'Full Backups'
+    Desc = 'Checks that all full backups have completed successfully.'
+    p001 = 'There are no missing full backups'
+    f001 = 'There are one or more missing full backups'
+    n001 = 'SQL is not installed on this server'
+
+[sql04]
+    Appl = SQL
+    Name = 'Log Backups'
+    Desc = 'Checks that all log backups have completed successfully.'
+    p001 = 'There are no missing log backups'
+    f001 = 'There are one or more missing log backups'
+    n001 = 'SQL is not installed on this server'
+
+[sql05]
+    Appl = SQL
+    Name = 'Failed Jobs'
+    Desc = 'Checks if there are any failed SQL Agent jobs.'
+    p001 = 'There are no failed SQL Agent jobs'
+    f001 = 'There are one or more failed SQL Agent jobs'
+    n001 = 'SQL is not installed on this server'
+
+[sql06]
+    Appl = SQL
+    Name = 'Disk Space'
+    Desc = 'Checks that there enough disk space.'
+    MinimumFreeSpace = 'Minimum amount of free space in megabytes that each drive should have'
+    p001 = 'All server disks have more than {0}mb free disk space'
+    f001 = 'There are server disks with less than {0}mb free disk space'
+    n001 = 'SQL is not installed on this server'
+
+[sql07]
+    Appl = SQL
+    Name = 'Database Status'
+    Desc = 'Checks that all databases are online.'
+    p001 = 'All databases are online'
+    f001 = 'One or more databases are offline'
+    n001 = 'SQL is not installed on this server'
+
 
 #################################################################################################
 # SYSTEM
