Added missing text entry

--- a/i18n/en-GB-tool.ini
+++ b/i18n/en-GB-tool.ini
@@ -96,6 +96,7 @@
     Button_Reset   = 'Reset All'
     Button_Cancel  = 'Cancel'
     Button_Save    = 'Save'
+    Warning        = 'You have made additional changes to the configuration`nPlease make sure you save these changes and generate a new QA script.'
 
 [add-page1]
     Tab            = 'Scanning'
