Update for new SEC-18 check

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -994,6 +994,17 @@
     f001 = 'SMBv1 is enabled'
     dt01 = 'The following registry paths are incorrect:,#'
 
+[sec18]
+    Appl = ALL
+    Name = 'Speculative Execution'
+    Desc = 'Checks the Microsoft recommendations to help protect against speculative execution side-channel vulnerabilities!nInformation taken from: https://support.microsoft.com/help/4072698'
+    p001 = 'All registry settings and patches are correct'
+    f001 = 'One or more registry settings or patches are not correct'
+    n001 = 'Operating system not supported'
+    dt01 = 'missing'
+    dt02 = 'invalid'
+
+
 #################################################################################################
 # SQL SERVERS
 [sql01]
