Minor description change

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -486,7 +486,7 @@
 [drv03]
     Appl = ALL
     Name = 'Page File Location & Size'
-    Desc = 'Check the page file is located on the system drive and is a fixed size.  The default setting is 4096MB (4GB). If the page file is larger a document detailing the tuning process used must exist and should follow Microsoft best tuning practices (http://support.microsoft.com/kb/2021748).'
+    Desc = 'Check the page file is located on the system drive and is a fixed size.  The default setting is 4096MB (4GB). If the page file is larger a document detailing the tuning process used must exist and should follow Microsoft best tuning practices - http://support.microsoft.com/kb/2021748'
     FixedPageFileSize = 'Fixed size in MB of the page file'
     PageFileLocation = 'Drive location of the page file'
     p001 = 'Page file is set correctly'
