Updated some strings

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -629,7 +629,7 @@
     f001 = 'One or more virtual machines are not using VHDX disks'
     n001 = 'Not a Hyper-V host server'
     n002 = 'No virtual machines exist on this host'
-    n003 = 'Not a supported operating system for this check'
+    n003 = 'Operating system not supported'
 
 
 #################################################################################################
@@ -691,7 +691,7 @@
     f003 = ', Team configuration is not set correctly'
     f004 = 'Teaming Count Issue'
     m001 = 'Teamed network adapters found, check they are configured correctly'
-    n001 = 'Not a supported operating system for this check'
+    n001 = 'Operating system not supported'
     n002 = 'Not a physical server'
     dt01 = 'All physical servers should have teamed network adapters'
     dt02 = 'Virtual machines should not be using network teaming'
@@ -786,7 +786,7 @@
     f002 = 'Time source is not set correctly'
     f003 = 'Error getting required information'
     f004 = 'Time source is set to a remote server, and is not synchronised correctly'
-    m001 = 'Not a supported operating system for this check'
+    m001 = 'Operating system not supported'
     dt01 = '{0},#Time is {1}'
     dt02 = 'Time is {0},#Work Group: {1}'
     dt03 = 'Source: {0},#Time is about {1} seconds adrift'
@@ -1004,13 +1004,12 @@
     dt01 = 'missing'
     dt02 = 'invalid'
 
-
 #################################################################################################
 # SQL SERVERS
 [sql01]
     Appl = SQL
     Name = 'SQL Version'
-    Desc = 'Checks that the SQL version is up-to-date and supported.'
+    Desc = 'Checks that the SQL version is up-to-date and supported.`n`nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'SQL Server version and patch level are supported'
     w001 = 'SQL Server version is supported, patch level is out of date'
     f001 = 'SQL Server version and patch level is out of support'
@@ -1019,7 +1018,7 @@
 [sql02]
     Appl = SQL
     Name = 'SQL Agent'
-    Desc = 'Checks that the SQL Server Agent service is up and running.'
+    Desc = 'Checks that the SQL Server Agent service is up and running.`n`nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'SQL Server Agent service is running'
     f001 = 'SQL Server Agent service is stopped'
     n001 = 'SQL is not installed on this server'
@@ -1027,7 +1026,7 @@
 [sql03]
     Appl = SQL
     Name = 'Full Backups'
-    Desc = 'Checks that all full backups have completed successfully.'
+    Desc = 'Checks that all full backups have completed successfully.`n`nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'There are no missing full backups'
     f001 = 'There are one or more missing full backups'
     n001 = 'SQL is not installed on this server'
@@ -1035,7 +1034,7 @@
 [sql04]
     Appl = SQL
     Name = 'Log Backups'
-    Desc = 'Checks that all log backups have completed successfully.'
+    Desc = 'Checks that all log backups have completed successfully.`n`nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'There are no missing log backups'
     f001 = 'There are one or more missing log backups'
     n001 = 'SQL is not installed on this server'
@@ -1043,7 +1042,7 @@
 [sql05]
     Appl = SQL
     Name = 'Failed Jobs'
-    Desc = 'Checks if there are any failed SQL Agent jobs.'
+    Desc = 'Checks if there are any failed SQL Agent jobs.`n`nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'There are no failed SQL Agent jobs'
     f001 = 'There are one or more failed SQL Agent jobs'
     n001 = 'SQL is not installed on this server'
@@ -1051,7 +1050,7 @@
 [sql06]
     Appl = SQL
     Name = 'Disk Space'
-    Desc = 'Checks that there enough disk space.'
+    Desc = 'Checks that there enough disk space.`n`nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     MinimumFreeSpace = 'Minimum amount of free space in megabytes that each drive should have'
     p001 = 'All server disks have more than {0}mb free disk space'
     f001 = 'There are server disks with less than {0}mb free disk space'
@@ -1060,7 +1059,7 @@
 [sql07]
     Appl = SQL
     Name = 'Database Status'
-    Desc = 'Checks that all databases are online.'
+    Desc = 'Checks that all databases are online.`n`nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'All databases are online'
     f001 = 'One or more databases are offline'
     n001 = 'SQL is not installed on this server'
