Update for COM-01

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -306,17 +306,20 @@
     ProductVersion = 'Current version of the product that you are using'
     p001 = 'McAfee product found, '
     p002 = 'DATs are OK,#'
-    p003 = 'Access Protection is installed and running'
-    f001 = 'McAfee product found, but wrong version, '
+    p003 = 'Access Protection is installed and running,#'
+    f001 = 'McAfee product found, but wrong version,#'
     f002 = 'DATs are not up-to-date,#'
     f003 = 'No DAT version found,#'
-    f004 = 'Access Protection is not installed or enabled'
-    f005 = '{0} not found, install required'
+    f004 = 'Access Protection is not installed or enabled,#'
+    f005 = '{0} not found, install required,#'
+    f006 = 'No EPO servers defined,#'
     dt01 = 'Version {0}, '
     dt02 = 'Version {0} found. Expected version: {1},#'
     dt03 = 'DATs {0} day(s) old,#'
     dt04 = 'Access Protection not installed'
     dt05 = 'Access Protection not enabled'
+    dt06 = 'Port {0} open to {1},#'
+    dt07 = 'Port {0} not open to {1},#'
     trw1 = 'Error opening software registry keys'
 
 [com02]
