Update for new button

--- a/i18n/en-GB-tool.ini
+++ b/i18n/en-GB-tool.ini
@@ -102,6 +102,9 @@
     FileError      = 'The selected file is not a compiled QA script.'
     RestoreDone    = 'Restore Complete.`nThe file is called "RESTORED.ini".`n`nIt is located in the same folder as the QA script you selected.  Remember to move it to the settings folder for reuse.'
 
+[hidedisabled]
+    Button         = 'Hide Disabled Items'
+
 [additional]
     Button         = 'Additional Options'
     Description    = 'This window allows you to set any additional settings that help control the QA scripts and its output.'
