Change for Compliance --> Tooling

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -108,7 +108,6 @@
 
 [section]
     Accounts       = 'Accounts'                # User and group accounts
-    Compliance     = 'Compliance'              # Tooling agent checks (AV, SCOM, SCCM, etc)
     Drives         = 'Drives'                  # Local disk drive information
     HyperV-Host    = 'HyperV Host'             # Microsoft Hyper-V host systems (not guests)
     Network        = 'Network'                 # Local area networking information
@@ -116,6 +115,7 @@
     Security       = 'Security'                # Security and firewall checks
     SQL            = 'SQL'                     # Microsoft SQL Servers
     System         = 'System'                  # Local server system checks
+    Tooling        = 'Tooling'                 # Tooling agent checks (AV, SCOM, SCCM, etc)
     Virtual        = 'Virtual'                 # Servers that are either Hyper-V or VMware ESX guests
     SystemFailure  = 'System Failure'          # Some sort of failure occurred with the server/check
 
@@ -123,7 +123,7 @@
 # The value must match the above list of keys
 [sectionlookup]
     acc = 'Accounts'
-    com = 'Compliance'
+    com = 'Tooling'
     drv = 'Drives'
     hvh = 'HyperV-Host'
     net = 'Network'
@@ -131,6 +131,7 @@
     sec = 'Security'
     sql = 'SQL'
     sys = 'System'
+    tol = 'Tooling'
     vmw = 'Virtual'
     err = 'SystemFailure'
 
