--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -1203,11 +1203,12 @@
     Appl = ALL
     Name = 'SCCM Installed'
     Desc = 'Check relevant SCCM agent process is running, and that the correct port is open to the management server.'
-    f001 = 'SCCM agent not found, install required'
-    dt01 = 'SCCM agent found'
-    dt02 = 'Port {0} open to {1}'
-    dt03 = 'Port {0} not open to {1}'
-    dt04 = 'Agent not configured with port and/or server name'
+    p001 = 'SCCM agent found'
+    f001 = 'SCCM agent found'
+    f002 = 'SCCM agent not found, install required'
+    dt01 = 'Port {0} open to {1}'
+    dt02 = 'Port {0} not open to {1}'
+    dt03 = 'Agent not configured with port and/or server name'
 
 [tol04]
     Appl = ALL
@@ -1215,16 +1216,16 @@
     Desc = 'Check NetBackup agent is installed and that the correct port is open to the management server.  Only applies to physical servers, or virtual servers with a list of known software installed.'
     ProductName = 'Full name of the product to look for'
     RequiredServerRoles = 'List of known software to check if installed'
+    p001 = 'NetBackup agent found'
     m001 = 'NetBackup agent not found, VADP backup.?'
-    dt01 = 'NetBackup agent found'
+    f001 = 'NetBackup agent not found'
+    dt01 = 'All physical servers require the NetBackup agent to be installed'
     dt02 = 'Version {0},#' 
     dt03 = 'Port 1556 open to {0},#'
     dt04 = 'Port 1556 not open to {0},#'
-    dt05 = 'NetBackup agent not found'
     dt06 = 'NetBackup agent not found, but this server has {0} installed which requires it'
     dt07 = 'NetBackup agent not found, but this server is a domain controller which requires it'
     dt08 = 'Is this server backed up via VADP.?  Manually check vCenter annotations'
-    dt09 = 'All physical servers require the NetBackup agent to be installed'
     trw1 = 'Error opening software registry keys'
     
 [tol05]
