Update for McAfee Endpoint Security Platform

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -1185,6 +1185,7 @@
     dt05 = 'Access Protection not enabled'
     dt06 = 'Port {0} open to {1},#'
     dt07 = 'Port {0} not open to {1},#'
+    dt08 = 'Modules:'
     trw1 = 'Error opening software registry keys'
 
 [tol02]
