Removed extra colon (:)

--- a/i18n/en-GB-tool.ini
+++ b/i18n/en-GB-tool.ini
@@ -50,7 +50,7 @@
     PleaseNote     = 'Please Note'
     SelectLocation = 'Select your scripts location first'
     SetValues      = 'Set Values  >'
-    SearchName     = 'Search Check Names:'
+    SearchName     = 'Search Check Names'
     SearchCheck    = 'Include Check Descriptions'
     SearchResults  = 'No search results found'
     ChangeNote     = 'Note: If you make any selection changes and click "Set Values >", any unsaved changes will be lost.'
