Update for new check SEC19

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -838,6 +838,13 @@
     dt01 = 'missing'
     dt02 = 'invalid'
 
+[sec19]
+    Appl = ALL
+    Name = 'Unquoted Service Paths'
+    Desc = 'Check that all serivce paths containing spaces are enclosed in quotes.  This is covered under CVE-2013-1609: https://www.cvedetails.com/cve/CVE-2013-1609/ !nUsing code taken from http://www.ryanandjeffshow.com/blog/2013/04/11/powershell-fixing-unquoted-service-paths-complete/'
+    p001 = 'All servies are set correctly'
+    f001 = 'One or more services have unquoted paths'
+
 #################################################################################################
 # SQL SERVERS
 [sql01]
