Update for SEC-20

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -845,6 +845,19 @@
     p001 = 'All servies are set correctly'
     f001 = 'One or more services have unquoted paths'
 
+[sec20]
+    Appl = ALL
+    Name = 'Check LMHash Security'
+    Desc = 'Ensure the system is set to not sure LMHashes of passwords and that LMHash authentication is secure.'
+    MinimumHashLevel = 'The minimum level that should be allowed'
+    p001 = 'LMHash security is disabled,#'
+    p002 = 'LM Compatibility Level is equal to or above configured level'
+    w001 = 'LM Compatibility Level is below configured level'
+    f001 = 'LMHash settings are not configured,#'
+    f002 = 'LMHash security is enabled'
+    f003 = 'Registry setting not found'
+    dt01 = 'Current LM Compatibility Level is: {0}'
+
 #################################################################################################
 # SQL SERVERS
 [sql01]
