--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -14,7 +14,7 @@
     Name           = 'English (United Kingdom)'
     Author         = 'Mike Blackett'
     Contact        = 'support@myrandomthoughts.co.uk'
-    LastUpdated    = '2017/10/26'
+    LastUpdated    = '2018/03/22'
 
 [engine]
 # General
@@ -863,7 +863,7 @@
 [sql01]
     Appl = SQL
     Name = 'SQL Version'
-    Desc = 'Checks that the SQL version is up-to-date and supported.!n!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
+    Desc = 'Checks that the SQL version is up-to-date and supported.!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'SQL Server version and patch level are supported'
     w001 = 'SQL Server version is supported, patch level is out of date'
     f001 = 'SQL Server version and patch level is out of support'
@@ -872,7 +872,7 @@
 [sql02]
     Appl = SQL
     Name = 'SQL Agent'
-    Desc = 'Checks that the SQL Server Agent service is up and running.!n!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
+    Desc = 'Checks that the SQL Server Agent service is up and running.!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'SQL Server Agent service is running'
     f001 = 'SQL Server Agent service is stopped'
     n001 = 'SQL is not installed on this server'
@@ -880,7 +880,7 @@
 [sql03]
     Appl = SQL
     Name = 'Full Backups'
-    Desc = 'Checks that all full backups have completed successfully.!n!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
+    Desc = 'Checks that all full backups have completed successfully.!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'There are no missing full backups'
     f001 = 'There are one or more missing full backups'
     n001 = 'SQL is not installed on this server'
@@ -888,7 +888,7 @@
 [sql04]
     Appl = SQL
     Name = 'Log Backups'
-    Desc = 'Checks that all log backups have completed successfully.!n!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
+    Desc = 'Checks that all log backups have completed successfully.!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'There are no missing log backups'
     f001 = 'There are one or more missing log backups'
     n001 = 'SQL is not installed on this server'
@@ -896,7 +896,7 @@
 [sql05]
     Appl = SQL
     Name = 'Failed Jobs'
-    Desc = 'Checks if there are any failed SQL Agent jobs.!n!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
+    Desc = 'Checks if there are any failed SQL Agent jobs.!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'There are no failed SQL Agent jobs'
     f001 = 'There are one or more failed SQL Agent jobs'
     n001 = 'SQL is not installed on this server'
@@ -904,7 +904,7 @@
 [sql06]
     Appl = SQL
     Name = 'Disk Space'
-    Desc = 'Checks that there enough disk space.!n!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
+    Desc = 'Checks that there enough disk space.!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     MinimumFreeSpace = 'Minimum amount of free space in megabytes that each drive should have'
     p001 = 'All server disks have more than {0}mb free disk space'
     f001 = 'There are server disks with less than {0}mb free disk space'
@@ -913,7 +913,7 @@
 [sql07]
     Appl = SQL
     Name = 'Database Status'
-    Desc = 'Checks that all databases are online.!n!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
+    Desc = 'Checks that all databases are online.!nNote: The PowerShell module for SQL (SQLPS) is required for this check.'
     p001 = 'All databases are online'
     f001 = 'One or more databases are offline'
     n001 = 'SQL is not installed on this server'
