--- a/i18n/en-GB-tool.ini
+++ b/i18n/en-GB-tool.ini
@@ -14,7 +14,7 @@
     Name           = 'English (United Kingdom)'
     Author         = 'Mike Blackett'
     Contact        = 'support@myrandomthoughts.co.uk'
-    LastUpdated    = '2017/10/26'
+    LastUpdated    = '2018/03/22'
 
 [page1]
     Tab            = 'Introduction'
@@ -77,6 +77,7 @@
     Prev           = '<  Prev'
     Next           = 'Next  >'
     Complete       = 'Complete  >'
+    ConfigNote     = 'Note: Some checks do not have configuration settings and will not be listed.'
 
 [page4]
     Tab            = 'Generate QA Script'
