--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -832,8 +832,8 @@
     Appl = ALL
     Name = 'Speculative Execution'
     Desc = 'Checks the Microsoft recommendations to help protect against speculative execution side-channel vulnerabilities!nInformation taken from: https://support.microsoft.com/help/4072698'
-    p001 = 'All registry settings and patches are correct'
-    f001 = 'One or more registry settings or patches are not correct'
+    p001 = 'All registry settings are correct'
+    f001 = 'One or more registry settings are not correct'
     n001 = 'Operating system not supported'
     dt01 = 'missing'
     dt02 = 'invalid'
