Settings for new check SYS24

--- a/i18n/en-GB.ini
+++ b/i18n/en-GB.ini
@@ -1180,6 +1180,15 @@
     n001 = 'Nothing to check for'
     dt01 = 'Report'
 
+[sys24]
+    Appl = ALL
+    Name = 'Search For A File'
+    Desc = 'Allows you to search for a specific file and fails on the result.!nNote, depending on the number of files on the server, this check may have a high chance of timing out.'
+    FileName    = 'Name of the file to search for (do not inclue any paths).  Wildcards are not supported.'
+    FailOnFound = 'If the file is found, should the check return a fail result'
+    dt01 = 'One or more matching files were found'
+    dt02 = 'No matching files were found'
+
 #################################################################################################
 # TOOLS
 [tol01]
